feat: update docker config and cors

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DEBUG=True
+DEBUG=False
 SECRET_KEY=o(.)*gvfs5b47*$=bfbjy20h&4&5-mhbl&lmutkoxm156p@uc=
 DJANGO_ALLOWED_HOSTS=0.0.0.0 127.0.0.1 [::1] localhost
 
