--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ coreapi==2.3.3
 coreschema==0.0.4
 cycler==0.10.0
 Django==3.2.8
+django-cors-headers==3.10.0
 django-debug-toolbar==3.2.2
 django-elasticsearch-dsl==7.2.0
 django-environ==0.8.1
