feat: kek deployment mode

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
         remote_docker_host: admin@217.28.229.61
         ssh_private_key: ${{ secrets.DOCKER_SSH_PRIVATE_KEY }}
         ssh_public_key: ${{ secrets.DOCKER_SSH_PUBLIC_KEY }}
-        deployment_mode: docker-compose
+        deployment_mode: docker-compose --build
         copy_stack_file: true
         deploy_path: /home/admin/kekpets
         stack_file_name: docker-compose.yml
