--- a/.gitignore
+++ b/.gitignore
@@ -63,8 +63,11 @@ coverage.xml
 # Django stuff:
 *.log
 local_settings.py
-#db.sqlite3
+db.sqlite3
 db.sqlite3-journal
+media
+static
+.data
 
 # Flask stuff:
 instance/
