--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,43 +4,42 @@ services:
   elasticsearch-gui:
    image: cars10/elasticvue
    ports:
-     - "8088:8080"
-#   depends_on:
-#     - elasticsearch
+     - "8888:8080"
+   depends_on:
+     - elasticsearch
 
   elasticsearch:
    image: docker.elastic.co/elasticsearch/elasticsearch:7.15.1
-#   container_name: elasticsearch
    ports:
      - "9200:9200"
-#     - "9300:9300"
    environment:
      - discovery.type=single-node
      - http.cors.enabled=true
-     - http.cors.allow-origin=http://localhost:8080
+     - http.cors.allow-origin=http://localhost:8888
 
-#  db:
-#    image: postgres:12.0
-#    volumes:
-#      - ./.data/db:/var/lib/postgresql/data  2021-10-22T08:12:10,797Z
-#    env_file:
-#      - ./.env
-#    ports:
-#    - "5432:5432"
+  nginx:
+    build: ./nginx
+    volumes:
+      - static_volume:/usr/src/app/static
+      - media_volume:/usr/src/app/media
+    ports:
+      - "80:80"
+    depends_on:
+      - app
+
   app:
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
-#    command: ls -lah
-#    volumes:
-#      - .:/usr/src/app
-    ports:
-      - "8000:8000"
+    command: gunicorn conf.wsgi:application --bind 0.0.0.0:8000
+    volumes:
+      - static_volume:/usr/src/app/static
+      - media_volume:/usr/src/app/media
+      - ./.data:/usr/src/app/.data
+    expose:
+      - 8000
     env_file:
       - ./.env
-#    depends_on:
-#      - db
-#      - elasticsearch
-#  redis:
-#    image: redis
-#    ports:
-#      - "6379:6379"
+    depends_on:
+      - elasticsearch
+volumes:
+  static_volume:
+  media_volume:
