feat: frontend dir updated with actual bugfixes

--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -23,7 +23,7 @@
     "^shared/enums(.*)$",
     "^shared/typings(.*)$",
     "^shared/constants(.*)$",
-    "^assets/(.*)$","^[./]",
+    "^assets/(.*)$",
     "^[./]"],
   "importOrderSeparation": true
 }
