--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -4,6 +4,6 @@ services:
       context: .
       dockerfile: Dockerfile
       args:
-        API_URL: ${API_URL:-'https://kekpets.win/api/v1"}
+        API_URL: ${API_URL:-"https://kekpets.win/api/v1"}
     ports:
       - "${PORT:-3000}:80"
