--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,8 +29,7 @@ services:
 #    - "5432:5432"
   app:
     build: .
-    command: gunicorn conf.wsgi:application --bind 0.0.0.0:8000 -w 4
-#    command: python manage.py runserver 0.0.0.0:8000
+    command: python manage.py runserver 0.0.0.0:8000
 #    command: ls -lah
 #    volumes:
 #      - ./media_dir:/usr/src/app/media
